# exbase

./: Cargo.toml  LICENSE  makefile  readme.md  readme.txt  run
content/: clang.md
examples/c/: main.c  target.c
examples/rust/: main.rs
examples/schemas/: Cargo.toml
examples/schemas/src/: main.rs  raw_schema.rs  writers.rs
src/: .gitignore  Cargo.toml  exbase.h
src/c/: readme.md
src/c/example/: main.c
src/c/include/: exbase.h
src/rust/: Cargo.toml
src/rust/examples/: .gitignore  basic.rs  run_target  target.c
src/rust/src/: ff_interface.rs  lib.rs  tests.rs
src/rust/src/linux/: memory.rs  process.rs
src/src/: error.rs  ff_interface.rs  lib.rs  patern_scanner.rs
src/src/linux/: bindings.rs  memory.rs  process.rs
src/src/tests/: mod.rs
src/src/windows/: bindings.rs  memory.rs  process.rs
