[package]
name = "exbase"
version = "0.1.0"
edition = "2024"

[dependencies]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "^0.60.2", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug"
]}

[features]
default = ["ffi"]
ffi = []
read_only = []

[[example]]
name = "main"
path = "../examples/rust/main.rs"
required-features = []